changed html structure
changed div class names and added house, smoke, and road images

--- a/index.html
+++ b/index.html
@@ -4,40 +4,51 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/keyframes.css">
+	<link rel="stylesheet" href="css/house.css">
 	<title>davaleba 7</title>
 </head>
 <body>	
-	<div class="a">
-  		<div class="b"></div>
-  	</div>
+	<div class="sky">
+		<!-- sun and moon container -->
+		<div class="a">
+	  		<div class="b"></div>
+	  	</div>
 
-  	<div id="background-wrap">
-  		<div class="first-row">
-  			<div class="x1">
+	  	<!-- clouds -->
+	  	<div id="background-wrap">
+			<div class="x1">
 		        <div class="cloud"></div>
 		    </div>
-		    <div class="x3">
+		    <div class="x2">
 		        <div class="cloud"></div>
 		    </div>
-  		</div>
-  		<div class="middle">
-  			<div class="x2">
+			<div class="x3">
 		        <div class="cloud"></div>
 		    </div>
-  		</div>
-  			
-		    
-  		<div class="second-row">
-  			<div class="x4">
+			<div class="x4">
 	        	<div class="cloud"></div>
 	   		</div>
 
 	    	<div class="x5">
 	       	 	<div class="cloud"></div>
 	    	</div>
-  		</div>
+		</div>
+	</div>
+	<!-- house - day image-->
+	<div class="house-day">
+		<img src="img/unnamed.png" alt="house">
+	</div>
+	
+	<!-- house - night image -->
+	<div class="house-night">
+		<img src="img/nigth.png" alt="house">
 	</div>
 
+	<!-- smoke -->
+	<img class="smoke" src="img/smoke.png" alt="smoke">
+
+	<!-- road image -->
+	<div class="road"></div>
 
 </body>
 </html>
